--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,20 +1,24 @@
 version: 1.0
-service:
-  name: hello-gin
-  source:
-    image:
-      repository: 503294267507.dkr.ecr.us-east-1.amazonaws.com/hello-gin
-      tag: latest
-  instanceConfiguration:
-    cpu: 1 vCPU
-    memory: 2 GB
-  healthCheck:
-    path: /
-    interval: 5 seconds
-    timeout: 4 seconds
-    healthyThreshold: 2
-    unhealthyThreshold: 2
-  autoDeploymentsEnabled: true
+runtime: docker
+build:
+  commands:
+    build:
+      - docker build -t hello-gin .
+      - docker tag hello-gin:latest hello-gin:${BUILD_NUMBER}
+  network: default
+run:
+  network:
+    port: 8080
   environment:
     - name: PORT
       value: "8080"
+    - name: ENVIRONMENT
+      value: "production"
+    - name: LOG_LEVEL
+      value: "info"
+  healthcheck:
+    path: /health
+    interval: 30s
+    timeout: 5s
+    healthy_threshold: 3
+    unhealthy_threshold: 3
