Update App Runner configuration to use Go runtime, add pre-build and post-build scripts, and modify network settings and environment variables.

--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,14 +1,25 @@
 version: 1.0
-runtime: docker
+runtime: go1
 build:
   commands:
+    pre-build:
+      - scripts/prebuild.sh
     build:
-      - docker build -t hello-gin .
-      - docker tag hello-gin:latest hello-gin:${BUILD_NUMBER}
-  network: default
+      - go build main.go
+    post-build:
+      - scripts/postbuild.sh
+  env:
+    - name: MY_VAR_EXAMPLE
+      value: "example"
 run:
+  runtime-version: 1.21
+  command: ./main
   network:
-    port: 8080
+    port: 3000
+    env: APP_PORT
+  env:
+    - name: MY_VAR_EXAMPLE
+      value: "example"
   environment:
     - name: PORT
       value: "8080"
